[package]
name = "last-action-gyro"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
# opt-level = 'z' # wasm less size.

[dependencies]
avian3d = "0.5.0"
noise = "0.9.0"

[dependencies.bevy]
version = "0.18.0"
default-features = false
features = ["3d", "free_camera", "dynamic_linking"]
